# wunder_challenge

./: .gitignore  README.md  instructions.md  pyproject.toml  utils.py
examples/simple/: solution.py
lob_fairy_predictorium/: README.md  utils.py
lob_fairy_predictorium/example_solution/: baseline.onnx  solution.py
market_state_forecast/: main.py
market_state_forecast/examples/simple/: README.md
market_state_forecast/montecarlo/: solution.py
mean50/: solution.py
simplelstm/: results.md  solution.py  utils.py
